@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - do not bring in the mvp_ methods from the Plugin role!
+          doing things this way seems to be exposing a bit of a stink…
 
 0.101627  2014-11-09 21:49:19-05:00 America/New_York
         - make the generation of the placeholder test file optional
